--- a/contact.html
+++ b/contact.html
@@ -28,14 +28,14 @@
     <header class="header">
       <div id="menu-btn" class="fas fa-bars"></div>
 
-      <a href="index.html" class="logo">Doctor Coffee <i class="fas fa-mug-hot"></i></a>
+      <a href="index" class="logo">Doctor Coffee <i class="fas fa-mug-hot"></i></a>
 
       <nav class="navbar">
-        <a href="index.html">home</a>
-        <a href="about.html">about</a>
-        <a href="contact.html">contact us</a>
-        <a href="menu.html">our menu</a>
-        <a class="arabic" href="law7.html">عاللّوح</a>
+        <a href="home">home</a>
+        <a href="about">about</a>
+        <a href="contact">contact us</a>
+        <a href="menu">our menu</a>
+        <a class="arabic" href="law7">عاللّوح</a>
       </nav>
 
       <a href="#" class="btn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
@@ -102,11 +102,11 @@
       <div class="box-container">
         <div class="box">
           <h3>quick links</h3>
-          <a href="index.html"><i class="fas fa-arrow-right"></i> home</a>
-          <a href="about.html"><i class="fas fa-arrow-right"></i> about</a>
-          <a href="menu.html"><i class="fas fa-arrow-right"></i> menu</a>
-          <a href="contact.html"><i class="fas fa-arrow-right"></i> contact us</a>
-          <a href="law7.html"><i class="fas fa-arrow-right"></i> 3al law7</a>
+          <a href="home"><i class="fas fa-arrow-right"></i> home</a>
+          <a href="about"><i class="fas fa-arrow-right"></i> about</a>
+          <a href="menu"><i class="fas fa-arrow-right"></i> menu</a>
+          <a href="contact"><i class="fas fa-arrow-right"></i> contact us</a>
+          <a href="law7"><i class="fas fa-arrow-right"></i> 3al law7</a>
       </div>
 
         <div class="box">
