Update and rename index.html to home.html

--- a/home.html
+++ b/home.html
@@ -28,11 +28,11 @@
         <a href="index.html" class="logo">Doctor Coffee <i class="fas fa-mug-hot"></i></a>
 
         <nav class="navbar">
-            <a href="index.html">home</a>
-            <a href="about.html">about</a>
-            <a href="contact.html">contact us</a>
-            <a href="menu.html">our menu</a>
-            <a class="arabic" href="law7.html">عاللّوح</a>
+            <a href="home">home</a>
+            <a href="about">about</a>
+            <a href="contact">contact us</a>
+            <a href="menu">our menu</a>
+            <a class="arabic" href="law7">عاللّوح</a>
         </nav>
 
         <a href="#" class="btn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
@@ -46,7 +46,7 @@
             <div class="content">
                 
                 <h3>More Espresso <br> Less Depresso</h3>
-                <a href="menu.html" class="btn">Order Now</a>
+                <a href="menu" class="btn">Order Now</a>
             </div>
 
             <div class="image">
@@ -75,7 +75,7 @@
                     from trusted suppliers and take great care in the roasting process to ensure that every 
                     cup is packed with flavor. But it's not just about the coffee itself – we believe in
                     fostering a true coffee culture and sharing our knowledge with our customers through our blogs.</p>
-                <a href="about.html" class="btn">read more</a>
+                <a href="about" class="btn">read more</a>
                 <div class="icons-container">
                     <div class="icons">
                         <img src="image/about-icon-1.png" alt="">
@@ -244,11 +244,11 @@
             
             <div class="box">
                 <h3>quick links</h3>
-                <a href="index.html"><i class="fas fa-arrow-right"></i> home</a>
-                <a href="about.html"><i class="fas fa-arrow-right"></i> about</a>
-                <a href="menu.html"><i class="fas fa-arrow-right"></i> menu</a>
-                <a href="contact.html"><i class="fas fa-arrow-right"></i> contact us</a>
-                <a href="law7.html"><i class="fas fa-arrow-right"></i> 3al law7</a>
+                <a href="#"><i class="fas fa-arrow-right"></i> home</a>
+                <a href="about"><i class="fas fa-arrow-right"></i> about</a>
+                <a href="menu"><i class="fas fa-arrow-right"></i> menu</a>
+                <a href="contact"><i class="fas fa-arrow-right"></i> contact us</a>
+                <a href="law7"><i class="fas fa-arrow-right"></i> 3al law7</a>
             </div>
 
             <div class="box">
