--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
     <header class="header">
         <div id="menu-btn" class="fas fa-bars"></div>
 
-        <a href="index.html" class="logo">Doctor Coffee <i class="fas fa-mug-hot"></i></a>
+        <a href="home" class="logo">Doctor Coffee <i class="fas fa-mug-hot"></i></a>
 
         <nav class="navbar">
             <a href="home">home</a>
