Update and rename home.html to index.html

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <header class="header">
         <div id="menu-btn" class="fas fa-bars"></div>
 
-        <a href="home" class="logo">Doctor Coffee <i class="fas fa-mug-hot"></i></a>
+        <a href="index" class="logo">Doctor Coffee <i class="fas fa-mug-hot"></i></a>
 
         <nav class="navbar">
-            <a href="home">home</a>
+            <a href="index">home</a>
             <a href="about">about</a>
             <a href="contact">contact us</a>
             <a href="menu">our menu</a>
@@ -244,7 +244,7 @@
             
             <div class="box">
                 <h3>quick links</h3>
-                <a href="#"><i class="fas fa-arrow-right"></i> home</a>
+                <a href="index"><i class="fas fa-arrow-right"></i> home</a>
                 <a href="about"><i class="fas fa-arrow-right"></i> about</a>
                 <a href="menu"><i class="fas fa-arrow-right"></i> menu</a>
                 <a href="contact"><i class="fas fa-arrow-right"></i> contact us</a>
