--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
 
             <div class="content">
                 <h3 class="title">what makes our coffee special!</h3>
-                <p>At our shop, we pride ourselves on serving quality c
-                    offee that is sure to delight your taste buds. We source only the finest beans 
+                <p>At our shop, we pride ourselves on serving quality coffee that is sure to delight your taste buds. We source only the finest beans 
                     from trusted suppliers and take great care in the roasting process to ensure that every 
                     cup is packed with flavor. But it's not just about the coffee itself – we believe in
                     fostering a true coffee culture and sharing our knowledge with our customers through our blogs.</p>
@@ -157,7 +156,7 @@
 
     <!-- REVIEW -->
     <section class="review" id="review">
-        <h1 class="heading">reviews <span>what people says</span></h1>
+        <h1 class="heading">reviews <span>what people say</span></h1>
 
         <div class="swiper review-slider">
             <div class="swiper-wrapper">
